--- a/themes/saadikhcustomtheme/css/custom.css
+++ b/themes/saadikhcustomtheme/css/custom.css
@@ -123,3 +123,8 @@ header{
 .tabs-entry.myaccount {
     border-top: 1px #e6e6e6 solid !important;
 }
+
+.logo-wrapper a img{
+    height: 100px;
+    width: 100px;
+}
